links and pictures

--- a/final_project/crafts.html
+++ b/final_project/crafts.html
@@ -8,27 +8,12 @@
 <!-- the viewport tag sets up browser for mobile devices-->
   <title>DanIY</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="dropdown">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    Menu
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-      <li><a href="diy.html">DIY</a></li>
-   <li><a href="crafts.html">Crafts</a></li>
-   <li><a href="baking.html">Baking</a></li>
-    <li role="separator" class="divider"></li>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-  </ul>
-</div>
 
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -73,25 +58,48 @@
   <h1>DanIY</h>
 </header>
 
+<div class="row">
 <div class="col-md-8 col-sm-8">
-  <!-- IMAGES -->
+<iframe width="682" height="325" src="https://www.youtube.com/embed/F-E0Ul4CjCE" frameborder="0" allowfullscreen></iframe>
   <div class="row">
-    <div class="col-md-6 col-sm-6">
-      FEATURED ARTICLE
+    <div class="col-md-11 col-sm-11">
+      *FEATURED ARTICLE*
+    <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget velit eu lacus auctor tincidunt vitae in orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec eu congue lectus. In hac habitasse platea dictumst. Curabitur venenatis, mi vitae porttitor vehicula, felis ante porta lorem, a dapibus velit felis eget massa. Sed dignissim leo turpis, nec porttitor quam sollicitudin sit amet. Vestibulum sit amet nisl viverra elit tincidunt posuere. Cras in ipsum vel justo posuere porta. Maecenas vel mi sit amet lectus consectetur efficitur. Quisque at risus erat<a href="http://daniellegfree.github.io/final_project/baking.html">...</a></p>
+
     </div>
   </div>
-  <div class="col-md-3 col-sm-3">
-  <img src="images/monkey.png" class="floatright" alt="Monkey Bread">
-<div class="row">
-  <div class="col-md-3 col-sm-3"
-  <img src="images/ribbon.jpg" class="floatright" alt="Ribbon Wall">
+
+  <div class="row">
+  <div class="col-md-6 col-sm-6">
+  <img class="image" src="images/monkey.jpg" alt="Monkey Bread">
+  <h4> <a href="http://daniellegfree.github.io/final_project/baking.html">Monkey Bread</a></h4>
+<h7>Etiam non dui tortor. Aenean lacinia viverra lorem.</h7>
 </div>
+  <div class="col-md-6 col-sm-6">
+  <img class="image" src="images/ribbon.jpg"  alt="Ribbon Wall">
+  	<div id="description">
+      <h4> <a href="http://daniellegfree.github.io/final_project/crafts.html">Ribbon Banner</a></h4>
+    <h7>Etiam non dui tortor. Aenean lacinia viverra lorem.</h7>
+  </div>
 </div>
-  <img src="images/cake.jpg" class="floatright" alt="Cake">
-  <img src="images/note.jpg" class="floatright" alt="Notebook">
 </div>
 
-<div class="col-md-4 col-sm-4"
+<div class="row">
+<div class="col-md-6 col-sm-6">
+  <img class="image"src="images/cake.jpg"  alt="Cake">
+  <h4> <a href="http://daniellegfree.github.io/final_project/baking.html">Chocolate Cake</a></h4>
+<h7>Etiam non dui tortor. Aenean lacinia viverra lorem.</h7>
+</div>
+<div class="col-md-6 col-sm-6">
+  <img class="image" src="images/note.jpg"  alt="Notebook">
+  <h4> <a href="http://daniellegfree.github.io/final_project/crafts.html">
+  Notebook</a></h4>
+<h7>Etiam non dui tortor. Aenean lacinia viverra lorem.</h7>
+</div>
+</div>
+
+</div>
+<div class="col-md-4 col-sm-4">
 <div id="secondary-right-sidebar" class="widget-area" role="complementary">
 	<div id="secondary">
 				<aside id="recent-posts-2" class="widget widget_recent_entries">		<h4 class="widget-title"><span>Recent Posts</span></h4>		<ul>
@@ -104,6 +112,7 @@
 					<li>
 				<a href="http://daniellegfree.github.io/final_project/diy.html">Face Mask</a>
 						</li>
+        </div>
 
 <!-- Word TAGS -->
 				</ul>
@@ -162,11 +171,12 @@
 <!-- TWITTER FEED -->
 </div>
 </div>
+</div>
 
 
 
 <!-- IMAGES -->
-</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/bootstrap.min.js"></script>
