--- a/final_project/index.html
+++ b/final_project/index.html
@@ -73,6 +73,8 @@ Category 3
 
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
+
+    this is upsed to be offest?
     <div class="row">
       <div class="col-md-4">
        grid design
