--- a/final_project/crafts.html
+++ b/final_project/crafts.html
@@ -23,6 +23,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#">DanIY</a>
+      <h5> Finding Creativity Everyday</h5>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,7 +56,7 @@
 </nav>
   <div class="container">
 <header>
-  <h1>DanIY</h>
+  <h1>DanIY</h1>
 </header>
 
 <div class="row">
@@ -99,7 +100,7 @@
 </div>
 
 </div>
-<div class="col-md-4 col-sm-4">
+<div class="col-md-4 col-sm-4" class="align-right">
 <div id="secondary-right-sidebar" class="widget-area" role="complementary">
 	<div id="secondary">
 				<aside id="recent-posts-2" class="widget widget_recent_entries">		<h4 class="widget-title"><span>Recent Posts</span></h4>		<ul>
