--- a/final_project/about.html
+++ b/final_project/about.html
@@ -33,7 +33,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-              <li><a href="diy.html">DIY</a></li>
+              <li><a href="diy.html">DIY Beauty</a></li>
            <li><a href="crafts.html">Crafts</a></li>
            <li><a href="baking.html">Baking</a></li>
             <li role="separator" class="divider"></li>
@@ -56,7 +56,7 @@
 </nav>
   <div class="container">
 <header>
-  <h4>A Little About Me</h4>
+  <h2>A Little About Me</h2>
 </header>
 
 <div class="row">
