--- a/final_project/index.html
+++ b/final_project/index.html
@@ -33,7 +33,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-              <li><a href="diy.html">DIY</a></li>
+              <li><a href="diy.html">DIY Beauty</a></li>
            <li><a href="crafts.html">Crafts</a></li>
            <li><a href="baking.html">Baking</a></li>
             <li role="separator" class="divider"></li>
@@ -73,13 +73,13 @@
   <div class="row">
   <div class="col-md-6 col-sm-6">
   <img class="image" src="images/monkey.jpg" alt="Monkey Bread">
-  <h4> <a href="http://daniellegfree.github.io/final_project/baking.html">Monkey Bread</a></h4>
+  <h3> <a href="http://daniellegfree.github.io/final_project/baking.html">Monkey Bread</a></h3>
 <h7>Etiam non dui tortor. Aenean lacinia viverra lorem.</h7>
 </div>
   <div class="col-md-6 col-sm-6">
   <img class="image" src="images/ribbon.jpg"  alt="Ribbon Wall">
   	<div id="description">
-      <h4> <a href="http://daniellegfree.github.io/final_project/crafts.html">Ribbon Banner</a></h4>
+      <h3> <a href="http://daniellegfree.github.io/final_project/crafts.html">Ribbon Banner</a></h3>
     <h7>Etiam non dui tortor. Aenean lacinia viverra lorem.</h7>
   </div>
 </div>
@@ -88,13 +88,13 @@
 <div class="row">
 <div class="col-md-6 col-sm-6">
   <img class="image"src="images/cake.jpg"  alt="Cake">
-  <h4> <a href="http://daniellegfree.github.io/final_project/baking.html">Chocolate Cake</a></h4>
+  <h3> <a href="http://daniellegfree.github.io/final_project/baking.html">Chocolate Cake</a></h3>
 <h7>Etiam non dui tortor. Aenean lacinia viverra lorem.</h7>
 </div>
 <div class="col-md-6 col-sm-6">
   <img class="image" src="images/note.jpg"  alt="Notebook">
-  <h4> <a href="http://daniellegfree.github.io/final_project/crafts.html">
-  Notebook</a></h4>
+  <h3> <a href="http://daniellegfree.github.io/final_project/crafts.html">
+  Notebook</a></h3>
 <h7>Etiam non dui tortor. Aenean lacinia viverra lorem.</h7>
 </div>
 </div>
