--- a/final_project/diy.html
+++ b/final_project/diy.html
@@ -160,8 +160,9 @@
 
 
 <!-- TWITTER FEED -->
-<a class="twitter-timeline" href="https://twitter.com/Danigfree" data-widget-id="727571648262643712">Tweets by @Danigfree</a>
+<a class="twitter-timeline" href="https://twitter.com/hashtag/DIY" data-widget-id="730775262657413121">#DIY Tweets</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
 <!-- TWITTER FEED -->
 </div>
 </div>
